# phire

./: phire.cabal
libphirec/Language/Phire/: Check.hs  Parse.hs  Syntax.hs
libphirec/Language/Phire/Codegen/: PHP.hs
phirec/: Main.hs
test/Language/Phire/: CheckSpec.hs  SyntaxSpec.hs
